# agentic-vlm

./: .gitignore  LICENSE  README.md  compare_scores.py  diagnose_nans.py  pyproject.toml  requirements.txt  results.json  vina_output.txt
agent/: architect_agent.py  base.py  chemist_agent.py  lab_manager.py  physicist_agent.py  pipeline.py  predictor_agent.py  scout_agent.py
agent/skills/: architect.py  chemist.py  physicist.py  predictor.py  scout.py  seed_molecules.py  unimol_predictor.py  vina_scorer.py
config/: settings.py
data/: lp_pdbbind.py
models/: attention_pool.py  egnn_layer.py  gnn_baseline.py  gnn_predictor.py  multiscale_edges.py  protein_encoder.py
notebooks/: finetune_unimol.ipynb  train_egnn.ipynb
outputs/: cross_validation.json  cross_validation_extended.json  cross_validation_unimol.json  real_pipeline_results.json
outputs/alzheimers/: results.json
outputs/cancer/: results.json
outputs/covid19/: results.json
outputs/diabetes/: results.json
rag/: knowledge_base.py  llm_synthesizer.py  vector_store.py
scripts/: build_pocket_ligand_data.py  build_rag_index.py  check_model_state.py  cross_validate_experimental.py  debug_range_compression.py  download_pdbbind.py  evaluate_gnn.py  run_lab_manager.py  test_generative_validation.py  test_pipeline_real.py  train_predictor.py
tests/: conftest.py  test_chemist.py  test_lab_manager.py  test_phase2.py  test_pipeline.py  test_real_data.py
utils/: pocket.py
